# agente_noticias_crewai

./: .gitignore  README.md  pyproject.toml
src/agente_noticias/: crew.py  main.py
src/agente_noticias/config/: agents.yaml  tasks.yaml
