[tool.poetry]
name = "agente_noticias"
version = "0.1.0"
description = "agente_noticias using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = {extras = ["tools"], version = "^0.28.8"}

[tool.poetry.scripts]
agente_noticias = "agente_noticias.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"